# mathvis

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  Cargo.toml  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/7c03409810b7a5ecfa49477e6e6ac461/: .filecache  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  native_assets.d  (+5 more)
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  main.rs
rust/src/animation/: axis.rs  mod.rs  motion.rs  show.rs  vector.rs
rust/src/api/: matrix.rs  mod.rs  point.rs  screen.rs  util.rs  vector.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_mathvis.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_mathvis.podspec
rust_builder/windows/: CMakeLists.txt
src/: lib.rs  main.rs
src/animation/: axis.rs  background.rs  mod.rs  show.rs  vector.rs
src/api/: matrix.rs  mod.rs  point.rs  screen.rs  util.rs  vector.rs
src/misc/: thread_pool.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
